--- a/_posts/2020-01-09-data.md
+++ b/_posts/2020-01-09-data.md
@@ -2,6 +2,8 @@
 title: Data Visualization
 ---
 
+Sooo, data!
+
 With what little I know about data and its structure, I believe that all of these visualizations are both list and dictionary compound data combined. Then, if you look closer, scalar data and compound data make up the two.
 
 Team Member Cards:
