--- a/_posts/2020-09-11-file.md
+++ b/_posts/2020-09-11-file.md
@@ -1,5 +1,7 @@
 ---
 title: File Reflection
+categories:
+- Reflections
 ---
 
 This week’s reading and activity had me thinking about plain text files. They seem to be the most effective way to express data because they are plain (hence the name) and show data in a basic, easy to understand format. I began to wonder if there are other reasons why plain text is advantageous. I found an article on MacWorld that talks about the benefits of using plain texts I also found he article useful because it is framing the discussion around Mac computers and software, which are my favorite kinds of computers. 
